fix: improve native code stability and expand test coverage
Native improvements:
- Add debug logging to hostfunc.rs and linker.rs for troubleshooting
- Fix potential deadlock in linker.rs by collecting host function definitions
  before acquiring linker lock (proper lock ordering)
- Add WASI threads JNI bindings
- Expand native function bindings in Panama module

Test improvements:
- Expand test coverage across JNI, Panama, and integration test modules
- Fix test assertions to match actual API behavior
- Replace placeholder tests with real implementations
- Add proper resource cleanup in test fixtures

Code quality:
- Fix PMD violations in BasicMetricsCollector, CsvReporter, JsonReporter
- Update logger naming conventions (logger -> LOGGER)
- Add private constructors to utility classes
- Fix field ordering and StringBuilder usage